--- a/app/src/components/ClothesList/ClothTag.css
+++ b/app/src/components/ClothesList/ClothTag.css
@@ -1,7 +1,7 @@
 
 .tag-show:hover{
-  background-image: var(--tag-linear-gradient-hover);
-  /* background-color: aqua; */
+  background-color: rgba(51, 128, 153, 0.2);
+  color: var(--tag-text-color-hover);
   cursor: pointer;
 }
 
@@ -9,7 +9,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
   color: var(--body-background-color);
   font-size: 16px;
   font-weight: bold;
@@ -33,7 +32,7 @@
     height: 16%;
     margin: 1% 0;
     color: var(--tag-text-color);
-    background-image: var(--tag-linear-gradient);
+    background-image: var(--tag-radial-gradient);
   }
 }
 
