--- a/app/src/components/Modal/Modal.css
+++ b/app/src/components/Modal/Modal.css
@@ -5,7 +5,7 @@ h4 {
 
 .modal-layout {
     position: absolute;
-    top: 50%;
+    top: 28%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
@@ -13,8 +13,41 @@ h4 {
     border: solid 1px var(--accent-color-light);
     border-radius: 12px;
     width: 90%;
-    height: 90%;
+    height: 50%;
     min-height: 275px;
+}
+
+.modal-image{
+    height: 100%;
+    max-height: 300px;
+    width: auto;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+@media screen and (max-height: 750px) {
+    .modal-layout {
+        height: 55%;
+    }
+
+    .modal-image {
+        top: 45%;
+        max-height: 230px;
+    }
+}
+
+
+.info-text{
+    width: 80%;
+    font-size: var(--font-size-h4);
+    text-align: center;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-header {
